fix align items

--- a/css_stylesheet/css_webstyle.css
+++ b/css_stylesheet/css_webstyle.css
@@ -270,7 +270,7 @@ mark {
 @media (max-width: 1000px) {
     #index_main {
         flex-wrap: wrap;
-        align-content: center;
+        align-content: flex-start;
         justify-content: center;
     }
 }
